python/epistemic_model_checker/antlr4_parser/SMCDELParser.py
# Generated from SMCDEL.g4 by ANTLR 4.9
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class SMCDELParser ( Parser ):

    grammarFileName = "SMCDEL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'VARS'", "'LAW'", "'OBS'", "','", "'('", 
                     "')'", "'['", "']'", "'{'", "'}'", "'<'", "'>'", "'!'", 
                     "'&'", "'|'", "':'", "'--'", "'WHERE?'", "'TRUE?'", 
                     "'VALID?'", "<INVALID>", "<INVALID>", "'~'", "<INVALID>", 
                     "<INVALID>", "'Top'", "'Bot'", "'knows that'", "'knows whether'" ]

    symbolicNames = [ "<INVALID>", "VARS", "LAW", "OBS", "COMMA", "LP", 
                      "RP", "LSB", "RSB", "LCB", "RCB", "OT", "CT", "EXC", 
                      "AMP", "PIPE", "COLON", "DOUBLEDASH", "WHERE", "TRUE", 
                      "VALID", "COMMENT", "NEG", "TILDE", "CONJ", "DISJ", 
                      "TOP", "BOT", "KNOWS_THAT", "KNOWS_WHETHER", "WS", 
                      "VARIABLE", "NUMBER", "CNAME" ]

    RULE_propositions = 0
    RULE_binary_formula = 1
    RULE_optionally_bracketed_formula = 2
    RULE_formula_list = 3
    RULE_variable_list = 4
    RULE_formula = 5
    RULE_state_law = 6
    RULE_observation = 7
    RULE_observations = 8
    RULE_query = 9
    RULE_queries = 10
    RULE_model = 11

    ruleNames =  [ "propositions", "binary_formula", "optionally_bracketed_formula", 
                   "formula_list", "variable_list", "formula", "state_law", 
                   "observation", "observations", "query", "queries", "model" ]

    EOF = Token.EOF
    VARS=1
    LAW=2
    OBS=3
    COMMA=4
    LP=5
    RP=6
    LSB=7
    RSB=8
    LCB=9
    RCB=10
    OT=11
    CT=12
    EXC=13
    AMP=14
    PIPE=15
    COLON=16
    DOUBLEDASH=17
    WHERE=18
    TRUE=19
    VALID=20
    COMMENT=21
    NEG=22
    TILDE=23
    CONJ=24
    DISJ=25
    TOP=26
    BOT=27
    KNOWS_THAT=28
    KNOWS_WHETHER=29
    WS=30
    VARIABLE=31
    NUMBER=32
    CNAME=33

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class PropositionsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.props = None # Variable_listContext

        def VARS(self):
            return self.getToken(SMCDELParser.VARS, 0)

        def variable_list(self):
            return self.getTypedRuleContext(SMCDELParser.Variable_listContext,0)


        def getRuleIndex(self):
            return SMCDELParser.RULE_propositions

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPropositions" ):
                listener.enterPropositions(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPropositions" ):
                listener.exitPropositions(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPropositions" ):
                return visitor.visitPropositions(self)
            else:
                return visitor.visitChildren(self)




    def propositions(self):

        localctx = SMCDELParser.PropositionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_propositions)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 24
            self.match(SMCDELParser.VARS)
            self.state = 25
            localctx.props = self.variable_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Binary_formulaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SMCDELParser.RULE_binary_formula

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class BinconjContext(Binary_formulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SMCDELParser.Binary_formulaContext
            super().__init__(parser)
            self.left = None # Token
            self.right = None # Token
            self.copyFrom(ctx)

        def AMP(self):
            return self.getToken(SMCDELParser.AMP, 0)
        def VARIABLE(self, i:int=None):
            if i is None:
                return self.getTokens(SMCDELParser.VARIABLE)
            else:
                return self.getToken(SMCDELParser.VARIABLE, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBinconj" ):
                listener.enterBinconj(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBinconj" ):
                listener.exitBinconj(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBinconj" ):
                return visitor.visitBinconj(self)
            else:
                return visitor.visitChildren(self)


    class BindisjContext(Binary_formulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SMCDELParser.Binary_formulaContext
            super().__init__(parser)
            self.left = None # Token
            self.right = None # Token
            self.copyFrom(ctx)

        def PIPE(self):
            return self.getToken(SMCDELParser.PIPE, 0)
        def VARIABLE(self, i:int=None):
            if i is None:
                return self.getTokens(SMCDELParser.VARIABLE)
            else:
                return self.getToken(SMCDELParser.VARIABLE, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBindisj" ):
                listener.enterBindisj(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBindisj" ):
                listener.exitBindisj(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBindisj" ):
                return visitor.visitBindisj(self)
            else:
                return visitor.visitChildren(self)



    def binary_formula(self):

        localctx = SMCDELParser.Binary_formulaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_binary_formula)
        try:
            self.state = 33
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                localctx = SMCDELParser.BinconjContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 27
                localctx.left = self.match(SMCDELParser.VARIABLE)
                self.state = 28
                self.match(SMCDELParser.AMP)
                self.state = 29
                localctx.right = self.match(SMCDELParser.VARIABLE)
                pass

            elif la_ == 2:
                localctx = SMCDELParser.BindisjContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 30
                localctx.left = self.match(SMCDELParser.VARIABLE)
                self.state = 31
                self.match(SMCDELParser.PIPE)
                self.state = 32
                localctx.right = self.match(SMCDELParser.VARIABLE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Optionally_bracketed_formulaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.form = None # FormulaContext

        def formula(self):
            return self.getTypedRuleContext(SMCDELParser.FormulaContext,0)


        def LP(self):
            return self.getToken(SMCDELParser.LP, 0)

        def RP(self):
            return self.getToken(SMCDELParser.RP, 0)

        def getRuleIndex(self):
            return SMCDELParser.RULE_optionally_bracketed_formula

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOptionally_bracketed_formula" ):
                listener.enterOptionally_bracketed_formula(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOptionally_bracketed_formula" ):
                listener.exitOptionally_bracketed_formula(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOptionally_bracketed_formula" ):
                return visitor.visitOptionally_bracketed_formula(self)
            else:
                return visitor.visitChildren(self)




    def optionally_bracketed_formula(self):

        localctx = SMCDELParser.Optionally_bracketed_formulaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_optionally_bracketed_formula)
        try:
            self.state = 40
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SMCDELParser.LSB, SMCDELParser.OT, SMCDELParser.NEG, SMCDELParser.CONJ, SMCDELParser.DISJ, SMCDELParser.TOP, SMCDELParser.BOT, SMCDELParser.VARIABLE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 35
                localctx.form = self.formula()
                pass
            elif token in [SMCDELParser.LP]:
                self.enterOuterAlt(localctx, 2)
                self.state = 36
                self.match(SMCDELParser.LP)
                self.state = 37
                localctx.form = self.formula()
                self.state = 38
                self.match(SMCDELParser.RP)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Formula_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._optionally_bracketed_formula = None # Optionally_bracketed_formulaContext
            self.forms = list() # of Optionally_bracketed_formulaContexts

        def optionally_bracketed_formula(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SMCDELParser.Optionally_bracketed_formulaContext)
            else:
                return self.getTypedRuleContext(SMCDELParser.Optionally_bracketed_formulaContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(SMCDELParser.COMMA)
            else:
                return self.getToken(SMCDELParser.COMMA, i)

        def getRuleIndex(self):
            return SMCDELParser.RULE_formula_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormula_list" ):
                listener.enterFormula_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormula_list" ):
                listener.exitFormula_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFormula_list" ):
                return visitor.visitFormula_list(self)
            else:
                return visitor.visitChildren(self)




    def formula_list(self):

        localctx = SMCDELParser.Formula_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_formula_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            localctx._optionally_bracketed_formula = self.optionally_bracketed_formula()
            localctx.forms.append(localctx._optionally_bracketed_formula)
            self.state = 47
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SMCDELParser.COMMA:
                self.state = 43
                self.match(SMCDELParser.COMMA)
                self.state = 44
                localctx._optionally_bracketed_formula = self.optionally_bracketed_formula()
                localctx.forms.append(localctx._optionally_bracketed_formula)
                self.state = 49
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Variable_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._VARIABLE = None # Token
            self.vs = list() # of Tokens

        def VARIABLE(self, i:int=None):
            if i is None:
                return self.getTokens(SMCDELParser.VARIABLE)
            else:
                return self.getToken(SMCDELParser.VARIABLE, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(SMCDELParser.COMMA)
            else:
                return self.getToken(SMCDELParser.COMMA, i)

        def getRuleIndex(self):
            return SMCDELParser.RULE_variable_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariable_list" ):
                listener.enterVariable_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariable_list" ):
                listener.exitVariable_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable_list" ):
                return visitor.visitVariable_list(self)
            else:
                return visitor.visitChildren(self)




    def variable_list(self):

        localctx = SMCDELParser.Variable_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_variable_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            localctx._VARIABLE = self.match(SMCDELParser.VARIABLE)
            localctx.vs.append(localctx._VARIABLE)
            self.state = 55
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SMCDELParser.COMMA:
                self.state = 51
                self.match(SMCDELParser.COMMA)
                self.state = 52
                localctx._VARIABLE = self.match(SMCDELParser.VARIABLE)
                localctx.vs.append(localctx._VARIABLE)
                self.state = 57
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FormulaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SMCDELParser.RULE_formula

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class PubAnnounceBoxContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SMCDELParser.FormulaContext
            super().__init__(parser)
            self.announced = None # Optionally_bracketed_formulaContext
            self.form = None # Optionally_bracketed_formulaContext
            self.copyFrom(ctx)

        def LSB(self):
            return self.getToken(SMCDELParser.LSB, 0)
        def EXC(self):
            return self.getToken(SMCDELParser.EXC, 0)
        def RSB(self):
            return self.getToken(SMCDELParser.RSB, 0)
        def optionally_bracketed_formula(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SMCDELParser.Optionally_bracketed_formulaContext)
            else:
                return self.getTypedRuleContext(SMCDELParser.Optionally_bracketed_formulaContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPubAnnounceBox" ):
                listener.enterPubAnnounceBox(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPubAnnounceBox" ):
                listener.exitPubAnnounceBox(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPubAnnounceBox" ):
                return visitor.visitPubAnnounceBox(self)
            else:
                return visitor.visitChildren(self)


    class NegContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SMCDELParser.FormulaContext
            super().__init__(parser)
            self.negated = None # Optionally_bracketed_formulaContext
            self.copyFrom(ctx)

        def NEG(self):
            return self.getToken(SMCDELParser.NEG, 0)
        def optionally_bracketed_formula(self):
            return self.getTypedRuleContext(SMCDELParser.Optionally_bracketed_formulaContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNeg" ):
                listener.enterNeg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNeg" ):
                listener.exitNeg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNeg" ):
                return visitor.visitNeg(self)
            else:
                return visitor.visitChildren(self)


    class DisjContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SMCDELParser.FormulaContext
            super().__init__(parser)
            self.disjs = None # Formula_listContext
            self.copyFrom(ctx)

        def DISJ(self):
            return self.getToken(SMCDELParser.DISJ, 0)
        def LP(self):
            return self.getToken(SMCDELParser.LP, 0)
        def RP(self):
            return self.getToken(SMCDELParser.RP, 0)
        def formula_list(self):
            return self.getTypedRuleContext(SMCDELParser.Formula_listContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDisj" ):
                listener.enterDisj(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDisj" ):
                listener.exitDisj(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDisj" ):
                return visitor.visitDisj(self)
            else:
                return visitor.visitChildren(self)


    class TopContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SMCDELParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TOP(self):
            return self.getToken(SMCDELParser.TOP, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTop" ):
                listener.enterTop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTop" ):
                listener.exitTop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTop" ):
                return visitor.visitTop(self)
            else:
                return visitor.visitChildren(self)


    class KnowsthatContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SMCDELParser.FormulaContext
            super().__init__(parser)
            self.agent = None # Token
            self.knows_that = None # Optionally_bracketed_formulaContext
            self.copyFrom(ctx)

        def KNOWS_THAT(self):
            return self.getToken(SMCDELParser.KNOWS_THAT, 0)
        def VARIABLE(self):
            return self.getToken(SMCDELParser.VARIABLE, 0)
        def optionally_bracketed_formula(self):
            return self.getTypedRuleContext(SMCDELParser.Optionally_bracketed_formulaContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterKnowsthat" ):
                listener.enterKnowsthat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitKnowsthat" ):
                listener.exitKnowsthat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitKnowsthat" ):
                return visitor.visitKnowsthat(self)
            else:
                return visitor.visitChildren(self)


    class BotContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SMCDELParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def BOT(self):
            return self.getToken(SMCDELParser.BOT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBot" ):
                listener.enterBot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBot" ):
                listener.exitBot(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBot" ):
                return visitor.visitBot(self)
            else:
                return visitor.visitChildren(self)


    class BinContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SMCDELParser.FormulaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def binary_formula(self):
            return self.getTypedRuleContext(SMCDELParser.Binary_formulaContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBin" ):
                listener.enterBin(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBin" ):
                listener.exitBin(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBin" ):
                return visitor.visitBin(self)
            else:
                return visitor.visitChildren(self)


    class ConjContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SMCDELParser.FormulaContext
            super().__init__(parser)
            self.conjs = None # Formula_listContext
            self.copyFrom(ctx)

        def CONJ(self):
            return self.getToken(SMCDELParser.CONJ, 0)
        def LP(self):
            return self.getToken(SMCDELParser.LP, 0)
        def RP(self):
            return self.getToken(SMCDELParser.RP, 0)
        def formula_list(self):
            return self.getTypedRuleContext(SMCDELParser.Formula_listContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConj" ):
                listener.enterConj(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConj" ):
                listener.exitConj(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConj" ):
                return visitor.visitConj(self)
            else:
                return visitor.visitChildren(self)


    class PropContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SMCDELParser.FormulaContext
            super().__init__(parser)
            self.p = None # Token
            self.copyFrom(ctx)

        def VARIABLE(self):
            return self.getToken(SMCDELParser.VARIABLE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProp" ):
                listener.enterProp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProp" ):
                listener.exitProp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProp" ):
                return visitor.visitProp(self)
            else:
                return visitor.visitChildren(self)


    class KnowswhetherContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SMCDELParser.FormulaContext
            super().__init__(parser)
            self.agent = None # Token
            self.knows_whether = None # Optionally_bracketed_formulaContext
            self.copyFrom(ctx)

        def KNOWS_WHETHER(self):
            return self.getToken(SMCDELParser.KNOWS_WHETHER, 0)
        def VARIABLE(self):
            return self.getToken(SMCDELParser.VARIABLE, 0)
        def optionally_bracketed_formula(self):
            return self.getTypedRuleContext(SMCDELParser.Optionally_bracketed_formulaContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterKnowswhether" ):
                listener.enterKnowswhether(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitKnowswhether" ):
                listener.exitKnowswhether(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitKnowswhether" ):
                return visitor.visitKnowswhether(self)
            else:
                return visitor.visitChildren(self)


    class PubAnnounceDiamondContext(FormulaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SMCDELParser.FormulaContext
            super().__init__(parser)
            self.announced = None # Optionally_bracketed_formulaContext
            self.form = None # Optionally_bracketed_formulaContext
            self.copyFrom(ctx)

        def OT(self):
            return self.getToken(SMCDELParser.OT, 0)
        def EXC(self):
            return self.getToken(SMCDELParser.EXC, 0)
        def CT(self):
            return self.getToken(SMCDELParser.CT, 0)
        def optionally_bracketed_formula(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SMCDELParser.Optionally_bracketed_formulaContext)
            else:
                return self.getTypedRuleContext(SMCDELParser.Optionally_bracketed_formulaContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPubAnnounceDiamond" ):
                listener.enterPubAnnounceDiamond(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPubAnnounceDiamond" ):
                listener.exitPubAnnounceDiamond(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPubAnnounceDiamond" ):
                return visitor.visitPubAnnounceDiamond(self)
            else:
                return visitor.visitChildren(self)



    def formula(self):

        localctx = SMCDELParser.FormulaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_formula)
        try:
            self.state = 92
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                localctx = SMCDELParser.TopContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 58
                self.match(SMCDELParser.TOP)
                pass

            elif la_ == 2:
                localctx = SMCDELParser.BotContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 59
                self.match(SMCDELParser.BOT)
                pass

            elif la_ == 3:
                localctx = SMCDELParser.BinContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 60
                self.binary_formula()
                pass

            elif la_ == 4:
                localctx = SMCDELParser.ConjContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 61
                self.match(SMCDELParser.CONJ)
                self.state = 62
                self.match(SMCDELParser.LP)
                self.state = 63
                localctx.conjs = self.formula_list()
                self.state = 64
                self.match(SMCDELParser.RP)
                pass

            elif la_ == 5:
                localctx = SMCDELParser.DisjContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 66
                self.match(SMCDELParser.DISJ)
                self.state = 67
                self.match(SMCDELParser.LP)
                self.state = 68
                localctx.disjs = self.formula_list()
                self.state = 69
                self.match(SMCDELParser.RP)
                pass

            elif la_ == 6:
                localctx = SMCDELParser.NegContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 71
                self.match(SMCDELParser.NEG)
                self.state = 72
                localctx.negated = self.optionally_bracketed_formula()
                pass

            elif la_ == 7:
                localctx = SMCDELParser.KnowsthatContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 73
                localctx.agent = self.match(SMCDELParser.VARIABLE)
                self.state = 74
                self.match(SMCDELParser.KNOWS_THAT)
                self.state = 75
                localctx.knows_that = self.optionally_bracketed_formula()
                pass

            elif la_ == 8:
                localctx = SMCDELParser.KnowswhetherContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 76
                localctx.agent = self.match(SMCDELParser.VARIABLE)
                self.state = 77
                self.match(SMCDELParser.KNOWS_WHETHER)
                self.state = 78
                localctx.knows_whether = self.optionally_bracketed_formula()
                pass

            elif la_ == 9:
                localctx = SMCDELParser.PubAnnounceDiamondContext(self, localctx)
                self.enterOuterAlt(localctx, 9)
                self.state = 79
                self.match(SMCDELParser.OT)
                self.state = 80
                self.match(SMCDELParser.EXC)
                self.state = 81
                localctx.announced = self.optionally_bracketed_formula()
                self.state = 82
                self.match(SMCDELParser.CT)
                self.state = 83
                localctx.form = self.optionally_bracketed_formula()
                pass

            elif la_ == 10:
                localctx = SMCDELParser.PubAnnounceBoxContext(self, localctx)
                self.enterOuterAlt(localctx, 10)
                self.state = 85
                self.match(SMCDELParser.LSB)
                self.state = 86
                self.match(SMCDELParser.EXC)
                self.state = 87
                localctx.announced = self.optionally_bracketed_formula()
                self.state = 88
                self.match(SMCDELParser.RSB)
                self.state = 89
                localctx.form = self.optionally_bracketed_formula()
                pass

            elif la_ == 11:
                localctx = SMCDELParser.PropContext(self, localctx)
                self.enterOuterAlt(localctx, 11)
                self.state = 91
                localctx.p = self.match(SMCDELParser.VARIABLE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class State_lawContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.form = None # FormulaContext

        def LAW(self):
            return self.getToken(SMCDELParser.LAW, 0)

        def formula(self):
            return self.getTypedRuleContext(SMCDELParser.FormulaContext,0)


        def getRuleIndex(self):
            return SMCDELParser.RULE_state_law

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterState_law" ):
                listener.enterState_law(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitState_law" ):
                listener.exitState_law(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitState_law" ):
                return visitor.visitState_law(self)
            else:
                return visitor.visitChildren(self)




    def state_law(self):
